examples/test/testpolicy13138.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13138
  namespace: namespace317
spec:
  podSelector:
    matchLabels:
      key43: value29
      key13: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value27
      podSelector:
        matchLabels:
          key17: value49
          key13: value26
